fixed spacing in events

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -95,7 +95,7 @@ nav ul li a:hover {
 #button-section {
     max-width: 900px;
     padding: 60px 50px;
-    margin: 40px auto;
+    margin: 60px auto 40px;
 }
 
 #button-section h1 {
@@ -497,7 +497,7 @@ h2 {
     justify-content: space-between;
     align-items: flex-start;
     max-width: 1200px;
-    margin: 0 auto 40px;
+    margin: 60px auto 40px;
     padding: 0 40px;
     gap: 50px;
 }
